# rpgnotes

./: .env.example  .gitignore  README.md  discord_speaker_mapping.json  main.py  main.py.bak  pyproject.toml  requirements.txt  requirements_amd.txt  template.md
ai/: gemini_client.py  init.py  models.py
audio/: init.py  processor.py  speaker_mapping.py  transcriber.py
config/: discord_speaker_mapping.json
config/contexts/en/: characters.txt  main.txt
config/contexts/pt/: characters.txt  main.txt
config/prompts/: details.txt
config/prompts/summary_templates/: parties.json  whisper.txt
core/: config.py  exceptions.py  init.py  session.py  session_manager.py  workflows.py
interface/: init.py  menu.py  setup_wizard.py
prompts/: details.json  details.txt  quotes.json  quotes.txt  summary-ootdl.txt  summary.txt  visual.txt  whisper.txt
prompts/en/: places.txt
prompts/pt/: places.txt
utils/: init.py
